fix: disable scroll when picking filter on mobile

--- a/src/public/static/style.css
+++ b/src/public/static/style.css
@@ -961,6 +961,26 @@ footer {
     #mobileToggle:checked + header .mobile-nav::after {
         transform: translate(-50%, -50%) rotate(90deg);
     }
+
+    header::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 100%;
+        width: 100vw;
+        height: 100%;
+        background-color: var(--slate-900);
+        z-index: -1;
+        transition: opacity 0.3s ease-in-out;
+        opacity: 0;
+    }
+    #mobileToggle:checked + header::after {
+        opacity: 0.8;
+    }
+
+    body:has(#mobileToggle:checked) {
+        overflow: hidden;
+    }
 }
 
 .language {
